--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ theme:
   disqus_shortname: korolvs
 
   # Google Analytics/Webmaster key, leave blank to ignore
-  google_analytics_key: 
+  google_analytics_key: 'UA-75324568-1'
   google_webmaster_key: 
 
 # Build settings
