--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Hi, I’m a professional Ruby on Rails and AngularJS developer with love to clear code and server architecture.
   A big fan of tests, well-documented code and learning something new.
 baseurl: "" # the subpath of your site, e.g. /blog/
-#url: "http://korolvs.com" # the base hostname & protocol for your site
-url: "http://localhost:4000" # the base hostname & protocol for your site
+url: "http://korolvs.com" # the base hostname & protocol for your site
 logourl: /assets/images/ruby.svg # Site logo
 author: "Viacheslav Korolev"
 author_thumbnail: "/assets/images/avatar.jpg" # Author avatar
